# tinkoff_fintech

./: README.md
homework7/: .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  run_the_app.py  setup.cfg
homework7/tests/: habr_for_test.html  test_get_articles_info.py  test_get_articles_urls.py  test_handlers.py  test_main.py
homework7/web_scraper/: __init__.py  get_articles_info.py  get_articles_urls.py  handlers.py  main.py  queues.py  worker.py
